fix: add z-index for nav

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -73,6 +73,7 @@
   width: 100%;
   background: rgba(253, 250, 250, 0.195);
   transition: 0.5s;
+  z-index: 1;
 }
 .header__nav.closed {
   left: -100%;
